# ti-prep

./: .gitignore  Dockerfile  LICENSE  Makefile  Pulumi.dev.yaml  Pulumi.yaml  README.md  docker-compose.yml  go.mod  go.sum  package.json  pyproject.toml  tools.go
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: go.yml
api/adapter/: postgres_repository.go  postgres_repository_factory.go  postgres_repository_integration_test.go  repository.py  sql.go
api/app/: application.go  application.py
api/domain/: errors.py  response.py
api/fixtures/: fixtures.go
api/interfaces/: application.go  postgres_repository.go
api/mapper/: mapper.go  mapper_test.go
api/models/: category.go  difficulty.go  responses.go
api/port/: __init__.py  mapper.py  options.go  port.go  port_integration_test.go  router.py
cli/app/: application.py
cli/config/: connection.py
cmd/notes/: main.go
common/postgres/: connection.py
db/: init.sql  leetcode_db_schema.sql
db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
docker/go/: Dockerfile
docker/proto/: Dockerfile
docker/py/: Dockerfile
etl/: __init__.py  exec.py  extract.py  load.py  main.py  transform.py
etl/postgres/: connection.py
etl/tmp/: data_apr2022.json
infra/: __main__.py
pkg/config/: env.go  options.go
pkg/data_structures/: sets.go  sets_test.go
pkg/middleware/: logging.go
pkg/postgres/: connection.go  options.go
pkg/sqlstore/: store.go
prep_api/adapter/: postgres_connection.py  sql.py
prep_api/app/: __init__.py  application.py  helper.py
prep_api/domain/: response.py
prep_api/port/: __init__.py  mapper.py  router.py
prep_ui/: index.html  package.json  pnpm-lock.yaml
prep_ui/src/: App.vue  main.ts
ui/: .gitignore  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: main.ts
(+63 files in other folders)
