[tool.poetry]
name = "leetcode-prep-cli"
version = "0.1.0"
description = "preparation cli"
authors = ["Ydot19 <abdalhalim.yaadata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.1.0"
pandas = "^1.4.2"
psycopg2 = "^2.9.3"
self = "^2020.12.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
black = "22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
