[tool.poetry]
name = "ti-prep"
version = "0.1.0"
description = "preparation cli"
authors = ["Ydot19 <abdalhalim.yaadata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.3"
pulumi = "^3.58.0"
pulumi-gcp = "^6.51.0"
fastapi = "^0.94.1"
uvicorn = "^0.18.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
black = "22.3.0"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
